cmake_minimum_required(VERSION 3.29)
project(Cpp_STL)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp_STL
    main.cpp
        ejercicio1/Ejercicio1.h
        ejercicio1/Ejercicio1.cpp
        ejercicio2/Ejercicio2.cpp
        ejercicio2/Ejercicio2.h
        ejercicio2/Circulo.cpp
        ejercicio2/Circulo.h
        ejercicio2/Triangulo.cpp
        ejercicio2/Triangulo.h
        ejercicio3/Ejercicio3.cpp
        ejercicio3/Ejercicio3.h)
